--- a/Assignment/Lyric Page/style.css
+++ b/Assignment/Lyric Page/style.css
@@ -1,8 +1,190 @@
-h1 {
-    font-family: Agency FB ;
-    font-weight: bold;
-    background-color: yellow;
-    font-size: 1em;
-    text-align: center
-    
+html {
+    box-sizing: border-box;
+    background-color:  #4e4e4e;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 200px 500px;
+    padding: 0;
 }
+
+head + body{
+    background-color: white;
+    margin: 0;
+    padding: 70px;
+    height: 3500px;
+}
+
+body{
+    background-color: none;
+    margin: 0 0 20px;
+    padding: 0;
+}
+
+header > h1{
+    background-color: yellow;
+    margin: 0;
+    padding: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    color: #4e4e4e;
+    text-transform: uppercase;
+    text-align: center
+}
+
+header ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 40px;
+    overflow: hidden;
+    background-color: #4e4e4e;
+    text-align: center;
+    position: relative; 
+}
+
+header li{
+    display: inline-block;    
+}
+
+header li a{
+    text-decoration: none;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    margin: 0 50px;
+    padding: 0;
+    color: white;
+    letter-spacing: 1px;
+}
+
+main{
+    background-color: none;
+    margin: 0;
+    padding: 0;
+    color: #4e4e4e;
+}
+
+main header{
+    background: url("images/talking_heads-speaking_in_tongues.png") no-repeat center; 
+    height: 700px;
+    background-size: cover;
+    position: relative;
+    text-transform: uppercase;
+    font-family: Bahnschrift Condensed;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+}
+
+main header section{
+    background-color:#252525;
+    background-blend-mode: multiply;
+    height: 700px;
+    margin: 0 220px 0 220px;
+    padding: 0;
+}
+
+main header section img{
+    float: right; 
+    height: 500px;
+    margin: 0;
+    padding: 100px
+}
+
+
+main header section h1{
+    font-size: 80px; 
+    color: yellow;
+    margin: 0;
+    padding: 150px 150px 0 150px;
+}
+
+main header section h2{
+    font-size: 50px;
+    color: white;
+    margin: 0;
+    padding-left: 150px;
+}
+
+main header section h3{
+    font-size: 40px;
+    color: #a09e9e;
+    margin: 50px 50px 50px 0;
+    padding-left: 150px;
+}
+
+main article{
+    box-sizing: border-box;
+    height: 2500px;
+    margin: 50px 300px;
+    padding: 0;
+    border-bottom: 6px solid yellow;
+}
+
+main article aside{
+    background-color:#4e4e4e;
+    width: 800px;
+    height: 2100px;
+    font-size: 32px;
+    float: right;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+article h2{
+    background-color: yellow;
+    font-family: Bahnschrift Condensed;
+    color: #4e4e4e;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 60px 0 0;
+}
+
+article aside h2{
+    height: 70px;
+    margin: 0;
+    padding: 60px 0 60px 60px;
+}
+
+article aside p{
+    margin: 0;
+    padding: 50px;
+}
+
+article aside blockquote{
+    box-sizing: border-box;
+    margin: 50px;
+    padding: 50px;
+    border-bottom: 6px solid white;
+}
+
+article aside section iframe{
+    margin: 50px;
+    padding: 0px;
+    width: 600px;
+    height: 400px;
+}
+
+section > h2{
+    width: 150px;
+    height: 30px;
+    font-size: 35px;
+    margin: 0;
+    padding: 20px; 
+    text-align: center;
+}
+
+section > p{
+    width: 800px;
+    border-left: 6px solid yellow;
+    font-size: 35px;
+    margin: 0 0 70px 0;
+    padding: 40px 40px 0 40px;
+}
+
+
+
+
+
+
