--- a/Assignment/Lyric Page/style.css
+++ b/Assignment/Lyric Page/style.css
@@ -1,45 +1,42 @@
 html {
-    
-    background-color:  #4e4e4e;
+    box-sizing: border-box;
+    background-color:  #3f3f3f;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 200px 500px;
+    margin: 5% 11%;
     padding: 0;
-    border-
 }
 
 head + body{
-    background-color: white;
+    border: 2px solid #ffffff;
+    background-color: #ffffff;
+    box-shadow: 15px 15px 15px 15px #464545;
     margin: 0;
-    padding: 70px;
-    height: 3500px;
-}
-
-body{
-    background-color: none;
-    margin: 0 0 20px;
-    padding: 0;
+    padding: 3%;
 }
 
 header > h1{
-    background-color: yellow;
-    margin: 0;
-    padding: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
+    background-color: #ffff00;
     font-weight: bold;
-    font-size: 40px;
-    color: #4e4e4e;
+    font-size: 50px;
+    margin: 0;
+    padding: 1.5%;
+    color: #3f3f3f;
     text-transform: uppercase;
-    text-align: center
+    text-align: center;
+    display: block;
 }
 
 header ul{
+    box-sizing: border-box;
+    background-color: #3f3f3f;
     list-style-type: none;
     margin: 0;
-    padding: 40px;
+    padding: 1%;
     overflow: hidden;
-    background-color: #4e4e4e;
     text-align: center;
     position: relative; 
+    display: block;
 }
 
 header li{
@@ -51,82 +48,87 @@ header li a{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    font-size: 25px;
-    margin: 0 50px;
-    padding: 0;
+    font-size: 35px;
+    margin: 0;
+    padding: 0 70px;
     color: white;
     letter-spacing: 1px;
+    display: block;
 }
 
 main{
     background-color: none;
     margin: 0;
     padding: 0;
-    color: #4e4e4e;
+    color: #3f3f3f;
+    display: block;
 }
 
 main header{
     background: url("images/talking_heads-speaking_in_tongues.png") no-repeat center; 
-    height: 700px;
+    height: 900px;
     background-size: cover;
     position: relative;
+    display: block;
+}
+
+header section{
+    position: relative;
+    height: 900px;
+    background: #000000;
+    opacity: 0.8;
+    font-family: Agency FB;
     text-transform: uppercase;
-    font-family: Bahnschrift Condensed;
-    font-weight: bold;
+    margin: 0 8.5%;
+    display: block;
+}
+
+img{
+    float: right;
+    height: 560px ;
     margin: 0;
-    padding: 0;
+    padding: 5% 3% 5%;
+    display: block;
 }
-
-main header section{
-    background-color:#252525;
-    background-blend-mode: multiply;
-    height: 700px;
-    margin: 0 220px 0 220px;
-    padding: 0;
-}
-
-main header section img{
-    float: right; 
-    height: 500px;
-    margin: 0;
-    padding: 100px
-}
-
 
 main header section h1{
-    font-size: 80px; 
+    font-size: 130px; 
     color: yellow;
     margin: 0;
-    padding: 150px 150px 0 150px;
+    padding: 7% 7% 0 3%;
+    display: block;
 }
 
-main header section h2{
-    font-size: 50px;
+h1 + h2{
+    font-size: 80px;
     color: white;
     margin: 0;
-    padding-left: 150px;
-}
+    padding: 0 0 0 3%;
+} 
 
 main header section h3{
-    font-size: 40px;
+    font-size: 60px;
     color: #a09e9e;
-    margin: 50px 50px 50px 0;
-    padding-left: 150px;
+    margin: 2% 2% 2% 0;
+    padding: 0 0 0 3%;
+}
+aside section{
+    margin: 2% 10%;
+    padding: 0;
 }
 
 main article{
-    box-sizing: border-box;
-    height: 2500px;
-    margin: 50px 300px;
+    margin: 2% 10%;
     padding: 0;
-    border-bottom: 6px solid yellow;
 }
 
 main article aside{
-    background-color:#4e4e4e;
-    width: 800px;
-    height: 2100px;
-    font-size: 32px;
+    box-sizing: border-box;
+    background-color:#3f3f3f;
+    line-height: 55px;
+    width: 33%;
+    font-size: 35px;
+    letter-spacing: 1px;
     float: right;
     color: white;
     margin: 0;
@@ -135,63 +137,89 @@ main article aside{
 
 article h2{
     background-color: yellow;
-    font-family: Bahnschrift Condensed;
+    font-family: Agency FB;
+    font-size: 50px;
     color: #4e4e4e;
     text-transform: uppercase;
     margin: 0;
-    padding: 60px 0 0;
+    padding: 0;
 }
 
 article aside h2{
-    height: 70px;
     margin: 0;
-    padding: 60px 0 60px 60px;
+    padding: 6% 0 6% 6%;
 }
 
 article aside p{
     margin: 0;
-    padding: 50px;
+    padding: 6%;
 }
 
 article aside blockquote{
     box-sizing: border-box;
-    margin: 50px;
-    padding: 50px;
+    margin: 6% 6% 0 6%;
+    padding: 5% 5% 5% 8%;
     border-bottom: 6px solid white;
 }
 
-article aside section iframe{
-    margin: 50px;
-    padding: 0px;
-    width: 600px;
-    height: 400px;
+section > iframe{
+    width: 850px;
+    height: 450px;
+    margin: 0;
+    padding: 0;
 }
 
-section > h2{
-    width: 150px;
-    height: 30px;
-    font-size: 35px;
+article > section{
+    box-sizing: border-box;
+    line-height: 55px;
+    width: 35%;
+    font-size: 2.5em;
+    letter-spacing: 1px;
+    color:#4e4e4e;
+    margin: 0 0 4% 0;
+    padding: 0;
+}
+
+article section h2{
+    background-color: yellow;
+    font-weight: bold;
+    width: 30%;
+    height: 10%;
     margin: 0;
-    padding: 20px; 
+    padding: 2%; 
     text-align: center;
 }
-
+  
 section > p{
-    width: 800px;
-    border-left: 6px solid yellow;
-    font-size: 35px;
-    margin: 0 0 3% 0;
-    padding: 2% 2% 0 2%;
+    box-sizing: border-box;
+    border-left:  solid yellow;
+    margin: 0 0 5% 0;
+    padding: 4% 5% 0 5%;
 }
 
-secton.chorus{
-    margin: 0 0 0 2%;
-
+.chorus{
+    margin: 0 0 4% 5%;
 }
 
+footer > section{
+    box-sizing: border-box;
+    border-top: 8px solid yellow;
+    text-align: left;
+    font-size: 1.7em;
+    margin: 3% 0 0 0;
+    padding: 2% 5% 0 0;
+}
 
+cite > a:link{
+    background-color: yellow;
+    font-weight: bold;
+    margin: 0;
+    padding: 1% 1% 1% 1%;
+}
 
-
+sup > a:link{
+    color: yellow;    
+}
 
 
 
