--- a/Assignment/Lyric Page/style.css
+++ b/Assignment/Lyric Page/style.css
@@ -76,7 +76,7 @@ header section{
     position: relative;
     height: 900px;
     background: #000000;
-    opacity: 0.8;
+    opacity: 85%;
     font-family: Agency FB;
     text-transform: uppercase;
     margin: 0 8.5%;
