--- a/Exercises/CSS_19Mar/style.css
+++ b/Exercises/CSS_19Mar/style.css
@@ -90,16 +90,16 @@ nav.social{
 .social ul li{
     display: block;
     margin: 20px;
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color:rgba(0, 0, 0, 0.4);
     width: 300px;
     text-align: right;
-    padding: 10px;
-    border-radius: 0 30px 30px 0;
+    padding: 15px;
+    border-radius: 0 40px 40px 0;
     transition: all 1s;
 }
 
 .social ul li:hover{
-    transform: translatex(110px);
+    transform: translatex(120px);
 }
 
 .social ul li.twitter:hover{
@@ -121,17 +121,19 @@ nav.social{
 .social ul li a{
     color: white;
     text-decoration: none; 
+    text-align: center;
+    font-size: 22px;
 }
 
 .social ul li a i{
     text-align: center;
-    margin-left: px;
+    margin-left: 15px;
     color: black;
     background-color: white;
     padding: 10px;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     font-size: 20px;
     transform: rotate(0deg);
 }
