--- a/Exercises/Dandy/style.css
+++ b/Exercises/Dandy/style.css
@@ -128,14 +128,14 @@ main{
 .content{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 14px;
+    co
     margin: 0;
     padding: 40px 40px 0 40px;
-
     grid-row: auto;
     grid-column: 2/4;
     grid-row: 1/1;
 }
-.content h2{
+h2{
     color: rgb(209, 94, 28);
     text-transform: uppercase;
     font-size: 20px;
