--- a/Assignment/G.Assig/Main/style.css
+++ b/Assignment/G.Assig/Main/style.css
@@ -16,7 +16,7 @@ header{
     background-size: cover;
     position: relative;
     display: block;
-    height: 470px;
+    height: 100vh;
 }
 
 section.top_bar{
@@ -56,20 +56,20 @@ img.logo{
 }
 
 a.active,.top a:hover{
-    background: rgb(179, 70, 7);
+    background: rgb(209, 94, 28);;
     transition: .5s;
 }
 
 
 nav.social{
     position: fixed;
-    top: 12%;
+    top: 20%;
 }
 
 .social ul{
     list-style-type: none;
     padding: 0;
-    transform: translatex(-50px);
+    transform: translatex(-70px);
 }
 
 .social ul li{
@@ -114,50 +114,84 @@ nav.social{
     background-color: #d80202;
 }
 
+main{
+    background: white; 
+    background-size: cover;
+    position: relative;
+    display: block;
+    height: 30vh;
+    margin: 0;
+    padding: 0;
+}
+
+
+
 .container{
-    background-color: white;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto;
-    grid-gap: 0;
-    height: 20vh;
+    grid-template-columns: 1fr, 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 10px;
+    padding: 30px;
+    margin: 0px;
 }
 
 .content{
-    background-color: orange;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 20px;
+    margin: 0 10px;
     padding: 20px;
+    grid-column: 2/4;
     grid-row: 1/1;
-    grid-column: 1/4;
 }
+
 h2{
-    color: rgb(209, 94, 28);
+    color:rgb(209, 94, 28);
     text-transform: uppercase;
     font-size: 20px;
+    text-align: left;
 }
 
-p{
+.content > p{
+    float: left;
     font-size: 12px;
-    padding: 0;
-    margin: 0;
-
+    padding: 0px;
+    margin: 0px;
+    text-align: left;
 }
+
 .image1{
-    background: black;
-    margin: 20px;
+    margin: 0 10px;
     padding: 20px;
     grid-row: 1/1;
-    grid-column: 3/4;
-    ;
+    grid-column: 1/1;
 }
 
 .image2{
-    background: orange;
-    margin: 20px;
+    margin: 0 10px;
     padding: 20px;
-    grid-row: 1/1;
-    grid-column: 4/4;
+    
+    width: 50px;
+    height: auto;
+}
+
+
+footer{
+    background: black;
+    height: 30vh;
+}
+
+section{
+    padding: 30px;
+    margin: 0;
+    color: rgb(165, 165, 165);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 0.5px;
+    line-height: 20px;
+    font-size: 12px;
+    text-align: center;
+}
+
+h4{
+    text-transform: uppercase;
 }
 
 
