--- a/Assignment/G.Assig/Main/style.css
+++ b/Assignment/G.Assig/Main/style.css
@@ -7,8 +7,9 @@
 }
 
 body{
-    font-family: Calibri;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     height: 5px;
+    background-color: white;
 }
 
 header{
@@ -49,8 +50,7 @@ img.logo{
 .top ul li a{
     color: #e4e3e3;
     font-size: 16px;
-    text-transform: uppercase;
-    font-family: Calibri;
+    text-transform: capitalize;
     padding: 5px 10px;
     border-radius: 5px;
 }
@@ -60,6 +60,19 @@ a.active,.top a:hover{
     transition: .5s;
 }
 
+button{
+    padding: 5px 10px;
+    color: white    ;
+    background-color: orange    ;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s; 
+}
+
+button:hover{
+    background-color: rgba(0, 136, 169, 0.5);
+}
 
 nav.social{
     position: fixed;
@@ -69,7 +82,7 @@ nav.social{
 .social ul{
     list-style-type: none;
     padding: 0;
-    transform: translatex(-70px);
+    transform: translatex(-50px);
 }
 
 .social ul li{
@@ -115,7 +128,6 @@ nav.social{
 }
 
 main{
-    background: white; 
     background-size: cover;
     position: relative;
     display: block;
@@ -130,14 +142,13 @@ main{
     display: grid;
     grid-template-columns: 1fr, 1fr;
     grid-template-rows: 1fr;
-    grid-gap: 10px;
     padding: 30px;
     margin: 0px;
 }
 
 .content{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0 10px;
+    margin: 0;
     padding: 20px;
     grid-column: 2/4;
     grid-row: 1/1;
@@ -146,7 +157,7 @@ main{
 h2{
     color:rgb(209, 94, 28);
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 18px;
     text-align: left;
 }
 
@@ -156,6 +167,7 @@ h2{
     padding: 0px;
     margin: 0px;
     text-align: left;
+    letter-spacing: 0.5px;
 }
 
 .image1{
@@ -165,21 +177,12 @@ h2{
     grid-column: 1/1;
 }
 
-.image2{
-    margin: 0 10px;
-    padding: 20px;
-    
-    width: 50px;
-    height: auto;
-}
-
-
 footer{
     background: black;
     height: 30vh;
 }
 
-section{
+footer section{
     padding: 30px;
     margin: 0;
     color: rgb(165, 165, 165);
@@ -190,7 +193,7 @@ section{
     text-align: center;
 }
 
-h4{
+footer h4{
     text-transform: uppercase;
 }
 
