--- a/Assignment/G.Assig/Main/style.css
+++ b/Assignment/G.Assig/Main/style.css
@@ -21,6 +21,7 @@ header{
 }
 
 div.top_bar{
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +33,8 @@ div.top_bar{
 
 img.logo{
     cursor: pointer;
+    width: 70px;
+    height: auto;
 }
 
 
@@ -76,7 +79,7 @@ button:hover{
 
 nav.social{
     position: fixed;
-    top: 20%;
+    top: 25%;
 }
 
 .social ul{
@@ -139,15 +142,16 @@ main{
 
 
 .container{
+    position: absolute;
     display: grid;
     grid-template-columns: 1fr, 1fr;
     grid-template-rows: 1fr;
-    padding: 30px;
+    padding: 2%;
     margin: 0px;
 }
 
 .content{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Kristen ITC;
     margin: 0;
     padding: 20px;
     grid-column: 2/4;
@@ -156,7 +160,7 @@ main{
 
 h2{
     color:rgb(209, 94, 28);
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-size: 18px;
     text-align: left;
 }
@@ -168,6 +172,7 @@ h2{
     margin: 0px;
     text-align: left;
     letter-spacing: 0.5px;
+    line-height: 20px;
 }
 
 .image1{
