--- a/Assignment/G.Assig/Story/style.css
+++ b/Assignment/G.Assig/Story/style.css
@@ -8,8 +8,6 @@
 
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 5px;
-    background-color: white;
 }
 
 header{
@@ -17,10 +15,10 @@ header{
     background-size: cover;
     position: relative;
     display: block;
-    height: 100vh;
+    height: 65vh;
 }
 
-section.top_bar{
+div.top_bar{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +30,8 @@ section.top_bar{
 
 img.logo{
     cursor: pointer;
+    width: 70px;
+    height: auto;
 }
 
 
@@ -127,51 +127,45 @@ nav.social{
     background-color: #d80202;
 }
 
+.chef{
+    font-family: Kristen ITC;
+    position: absolute;
+    width: 400px;
+    height: 300px;
+    text-align: center;
+    margin: 7% 70% 7% 7%;
+    text-transform: capitalize;
+    color: rgb(209, 94, 28, 0.7);
+}
+.chef p{
+    color: gray;
+}
+
 main{
-    background: rgb(243, 237, 210);
-    height: 50vh;
+    background: black;
+    height: 210vh;
 }
 
 
-
-.container{
-    display: grid;
-    grid-template-columns: 1fr, 1fr;
-    grid-template-rows: 1fr;
-    padding: 30px;
+.story-page-content{
+    font-family: Kristen ITC;
+    text-align: center;
+    line-height: 20px;
+    padding: 7%;
     margin: 0px;
 }
 
-.content{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0;
-    padding: 20px;
-    grid-column: 2/4;
-    grid-row: 1/1;
-}
-
-h2{
-    color:rgb(209, 94, 28);
-    text-transform: uppercase;
-    font-size: 18px;
-    text-align: left;
-}
-
-.content > p{
-    float: left;
-    font-size: 12px;
-    padding: 0px;
+p{
+    font-size: 15px;
+    color: grey;
+    padding: 12px;
     margin: 0px;
-    text-align: left;
+    text-align: center;
     letter-spacing: 0.5px;
+    line-height: 30px;
 }
 
-.image1{
-    margin: 0 10px;
-    padding: 20px;
-    grid-row: 1/1;
-    grid-column: 1/1;
-}
+
 
 
 
