--- a/Assignment/G.Assig/Main/style.css
+++ b/Assignment/G.Assig/Main/style.css
@@ -8,8 +8,8 @@
 
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 5px;
-    background-color: white;
+    height: 170vh;
+    background-color: black;
 }
 
 header{
@@ -131,76 +131,56 @@ nav.social{
 }
 
 main{
-    background-size: cover;
     position: relative;
     display: block;
-    height: 30vh;
+    height: 70vh;
     margin: 0;
     padding: 0;
 }
 
 
-
-.container{
-    position: absolute;
-    display: grid;
-    grid-template-columns: 1fr, 1fr;
-    grid-template-rows: 1fr;
-    padding: 2%;
+.home-content{
+    font-family: Kristen ITC;
+    text-align: center;
+    line-height: 30px;
+    padding: 7%;
     margin: 0px;
+
 }
 
 .content{
-    font-family: Kristen ITC;
-    margin: 0;
     padding: 20px;
-    grid-column: 2/4;
-    grid-row: 1/1;
+    margin: 40px;
 }
-
 h2{
-    color:rgb(209, 94, 28);
+    color:rgb(209, 94, 28, 0.8);
     text-transform: capitalize;
-    font-size: 18px;
-    text-align: left;
+    font-size: 20px;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
 }
 
 .content > p{
-    float: left;
-    font-size: 12px;
+
+    color: grey;
+    font-size: 15px;
     padding: 0px;
-    margin: 0px;
-    text-align: left;
-    letter-spacing: 0.5px;
-    line-height: 20px;
-}
-
-.image1{
-    margin: 0 10px;
-    padding: 20px;
-    grid-row: 1/1;
-    grid-column: 1/1;
-}
-
-footer{
-    background: black;
-    height: 30vh;
-}
-
-footer section{
-    padding: 30px;
-    margin: 0;
-    color: rgb(165, 165, 165);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    letter-spacing: 0.5px;
-    line-height: 20px;
-    font-size: 12px;
+    margin: 10px;
     text-align: center;
+    letter-spacing: 0.5px;
+    line-height: 30px;
 }
 
-footer h4{
-    text-transform: uppercase;
+.home-content>.logo{
+    cursor: pointer;
+    width: 70px;
+    height: auto;
 }
 
-
+.beer-cup{
+    width: 30px;
+    height: auto;
+    padding: 5px 5px 0;
+}
 
