--- a/Assignment/G.Assig/Main/style.css
+++ b/Assignment/G.Assig/Main/style.css
@@ -8,8 +8,6 @@
 
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 170vh;
-    background-color: black;
 }
 
 header{
@@ -21,14 +19,13 @@ header{
 }
 
 div.top_bar{
-
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px;
     background: rgba(63, 63, 63, 0.3);
     height: 60px;
-    width: 100%;
+    width: auto;
 }
 
 img.logo{
@@ -130,30 +127,40 @@ nav.social{
     background-color: #d80202;
 }
 
+
 main{
-    position: relative;
-    display: block;
-    height: 70vh;
-    margin: 0;
-    padding: 0;
+    height: 120vh;
+    text-align: center;
 }
 
-
-.home-content{
+.container{
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: span 1;
+    grid-gap: 25px;
+    height: 75vh;
     font-family: Kristen ITC;
     text-align: center;
     line-height: 30px;
-    padding: 7%;
-    margin: 0px;
-
-}
-
-.content{
     padding: 20px;
-    margin: 40px;
+    margin: 20px;
 }
+
+.home-content{
+    background: rgb(255, 255, 255);
+    grid-column: 1/2;
+    grid-row: 1/3;
+    font-family: Kristen ITC;
+    color: rgb(68, 68, 68);
+    font-size: 15px;
+    text-align: center;
+    line-height: 30px;
+    padding: 7%;
+    margin: 20px;
+}
+
 h2{
-    color:rgb(209, 94, 28, 0.8);
+    color:rgb(209, 94, 28);
     text-transform: capitalize;
     font-size: 20px;
     text-align: center;
@@ -161,25 +168,41 @@ h2{
     padding: 10px;
 }
 
-.content > p{
-    color: gray
-    font-size: 15px;
+.image1{
+    background: url("images/party_beer.jpg") no-repeat center;
+    background-size: cover;
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 100%;
+    grid-column: 2/3;
+    grid-row: 1/2;
     padding: 0px;
-    margin: 10px;
-    text-align: center;
-    letter-spacing: 0.5px;
-    line-height: 30px;
 }
 
-.home-content>.logo{
+.home-content>.icon{
     cursor: pointer;
-    width: 70px;
+    width: 90px;
     height: auto;
 }
 
-.beer-cup{
-    width: 30px;
-    height: auto;
-    padding: 5px 5px 0;
+footer{
+    background: black;
+    height: 30vh;
+}
+
+section{
+    padding: 30px;
+    margin: 0;
+    color: rgb(165, 165, 165);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 0.5px;
+    line-height: 20px;
+    font-size: 12px;
+    text-align: center;
+}
+
+h4{
+    text-transform: uppercase;
 }
 
