--- a/Assignment/G.Assig/Main/style.css
+++ b/Assignment/G.Assig/Main/style.css
@@ -191,6 +191,11 @@ footer{
     height: 30vh;
 }
 
+.logo-squid{
+    width: 60px;
+    height: auto;
+}
+
 section{
     padding: 30px;
     margin: 0;
