--- a/Assignment/G.Assig/Main/style.css
+++ b/Assignment/G.Assig/Main/style.css
@@ -8,6 +8,7 @@
 
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background: rgb(255, 255, 255);
 }
 
 header{
@@ -56,13 +57,13 @@ img.logo{
 }
 
 a.active,.top a:hover{
-    background: rgb(209, 94, 28);;
+    background: rgb(209, 94, 28);
     transition: .5s;
 }
 
 button{
     padding: 5px 10px;
-    color: white    ;
+    color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
     border: none;
     border-radius: 40px;
@@ -98,7 +99,7 @@ nav.social{
 .social ul li a i{
     margin-left: 15px;
     color: black;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     padding: 10px;
     border-radius: 50%;
     width: 35px;
@@ -112,33 +113,33 @@ nav.social{
 }
 
 .social ul li.twitter:hover{
-    background-color: #55acee;
+    background-color: rgb(85, 172, 238);
 }
 
 .social ul li.facebook:hover{
-    background-color: #3d5999;
+    background-color: rgb(61, 89, 153);
 }
 
 .social ul li.instagram:hover{
-    background-color: #e4405f;
+    background-color: rgb(228, 64, 95);
 }
 
 .social ul li.youtube:hover{
-    background-color: #d80202;
+    background-color: rgb(216, 2, 2);
 }
 
 
 main{
-    height: 120vh;
+    height: 100vh;
     text-align: center;
 }
 
 .container{
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 65% 35%;
     grid-template-rows: span 1;
     grid-gap: 25px;
-    height: 75vh;
+    height: 70vh;
     font-family: Kristen ITC;
     text-align: center;
     line-height: 30px;
@@ -164,8 +165,7 @@ h2{
     text-transform: capitalize;
     font-size: 20px;
     text-align: center;
-    margin: 10px;
-    padding: 10px;
+    padding: 0 10px;
 }
 
 .image1{
@@ -173,7 +173,7 @@ h2{
     background-size: cover;
     position: relative;
     display: block;
-    height: 100%;
+    height: 85%;
     width: 100%;
     grid-column: 2/3;
     grid-row: 1/2;
@@ -187,19 +187,19 @@ h2{
 }
 
 footer{
-    background: black;
+    background: rgb(209, 94, 28);
     height: 30vh;
 }
 
 .logo-squid{
-    width: 60px;
+    width: 30px;
     height: auto;
 }
 
 section{
     padding: 30px;
     margin: 0;
-    color: rgb(165, 165, 165);
+    color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 0.5px;
     line-height: 20px;
