--- a/Assignment/G.Assig/Story/style.css
+++ b/Assignment/G.Assig/Story/style.css
@@ -171,7 +171,7 @@ main{
 }
 
 .image1{
-    background: url("images/beer_background_1.jpg") no-repeat center;
+    background: url("images/Dandy-1.jpg") no-repeat center;
     background-size: cover;
     position: relative;
     display: block;
@@ -194,7 +194,7 @@ main{
 }
 
 .image3{
-    background: url("images/Dandy_Brewing_Company_6_B&W.jpg") no-repeat center;
+    background: url("images/Dandy-2.jpg") no-repeat center;
     background-size: cover;
     position: relative;
     display: block;
